--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open index.html",
-            "file": "c:\\Users\\2345439\\Desktop\\Travelgram\\index.html"
+            "name": "Open Contact.html",
+            "file": "c:\\Users\\2345439\\Desktop\\Travelgram\\Contact.html"
         }
     ]
 }
